--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <html>
   <head>
     <title>Test</title>
+    <style>
+      body{
+        background-color:#fff;
+      }
+      .div{
+        background-color:#ddd;text-align:center;
+      }
+      @media screen and (max-width:640px) {
+        .div { width:100%;height:75px;color:#666;font-size:20px; }
+      }
+      @media screen and (max-width:1200px) {
+        .div { width:100%;height:125px;color:#666;font-size:24px;font-weight:600; }
+      }
+    </style>
   </head>
   <body>
-    C'est un test!
+    <div class="div">URGENCES MOBILES</div>
   </body>
 </html>
