Add test project

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
 ﻿<!DOCTYPE html>
-=======
-<!DOCTYPE html>
->>>>>>> 4e3e8b50425e75c9498257a9e137cd50771aa55f
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -25,12 +21,8 @@
 		<section id="appcontainer">
 			<div class="appcontainer">
 				<h3 id="appname">URGENCE<br><span>MOBIL<span>E</span></span></h3>
-				<img src="img/logo.png"/>
+				<img class="applogo" src="img/logo.png"/>
 			</div>
 		</section>
 	<body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 4e3e8b50425e75c9498257a9e137cd50771aa55f
