Add test project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +14,7 @@
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
 		<!--JS & JQuery-->
+		<script type="text/javascript" src="js/jquery.min.js"></script>
 		
 	</head>
 	
@@ -24,5 +25,10 @@
 				<img class="applogo" src="img/logo.png"/>
 			</div>
 		</section>
+		<script>
+			setTimeout(function() {
+				window.location.href = "home.html";
+			}, 4000);
+		</script>
 	<body>
 </html>
