Add test project

--- a/emergency_call.html
+++ b/emergency_call.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1;maximum-scale=1.0; user-scalable=0;">
-		<title>URGENCE MOBILE | Accueil</title>
+		<title>URGENCE MOBILE | Appel Urgences</title>
 		<!--CSS-->
 		<link href="css/styles.css?v=1.2" rel="stylesheet">
 		<link href="css/queries.css?v=1.2" rel="stylesheet">
@@ -69,16 +69,17 @@
 		</header>
 		<section class="main">
 			<div class="container">
-				<div class="row">
+				<div class="row emergency-numbers">
 					<!-- Main Menu -->
 					<div class="col-xs-6 col-md-4 square">
 						<!-- square box -->
 						<div class="content">
-							<a href="#" class="square-link">
+							<a href="tel:55788539" class="square-link">
 								<div class="table">
 									<div class="table-cell numbers">
-											<img src="img/icon-1.png"/>
-											Guide de Secourisme
+											Protection Civile
+											<img src="img/urg-icon-1.png"/>
+											198
 									</div>
 								</div>
 							</a>
@@ -87,11 +88,12 @@
 					<div class="col-xs-6 col-md-4 square">
 						<!-- square box -->
 						<div class="content">
-							<a href="emergency_call.html" class="square-link">
+							<a href="tel:55788539" class="square-link">
 								<div class="table">
 									<div class="table-cell numbers">
-											<img src="img/icon-2.png"/>
-											Appel Urgences
+											S.A.M.U.
+											<img src="img/urg-icon-2.png"/>
+											190
 									</div>
 								</div>
 							</a>
