--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
 							<a href="#" class="square-link">
 								<div class="table">
 									<div class="table-cell numbers">
-											<img src="img/icon-1.png"/>
+											<img src="img/icon-1.PNG"/>
 											Guide de Secourisme
 									</div>
 								</div>
@@ -90,7 +90,7 @@
 							<a href="emergency_call.html" class="square-link">
 								<div class="table">
 									<div class="table-cell numbers">
-											<img src="img/icon-2.png"/>
+											<img src="img/icon-2.PNG"/>
 											Appel Urgences
 									</div>
 								</div>
