Adding Appel Urgences Module

--- a/emergency_call.html
+++ b/emergency_call.html
@@ -74,7 +74,7 @@
 					<div class="col-xs-6 col-md-4 square">
 						<!-- square box -->
 						<div class="content">
-							<a href="tel:55788539" class="square-link">
+							<a href="tel:198" class="square-link">
 								<div class="table">
 									<div class="table-cell numbers">
 											Protection Civile
@@ -88,12 +88,40 @@
 					<div class="col-xs-6 col-md-4 square">
 						<!-- square box -->
 						<div class="content">
-							<a href="tel:55788539" class="square-link">
+							<a href="tel:190" class="square-link">
 								<div class="table">
 									<div class="table-cell numbers">
 											S.A.M.U.
 											<img src="img/urg-icon-2.png"/>
 											190
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-6 col-md-4 square">
+						<!-- square box -->
+						<div class="content">
+							<a href="tel:197" class="square-link">
+								<div class="table">
+									<div class="table-cell numbers">
+											Police
+											<img src="img/urg-icon-2.png"/>
+											197
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-6 col-md-4 square">
+						<!-- square box -->
+						<div class="content">
+							<a href="tel:193" class="square-link">
+								<div class="table">
+									<div class="table-cell numbers">
+											Garde Nationale
+											<img src="img/urg-icon-2.png"/>
+											193
 									</div>
 								</div>
 							</a>
