Update Module Appel Urgences

--- a/home.html
+++ b/home.html
@@ -97,6 +97,58 @@
 							</a>
 						</div>
 					</div>
+					<div class="col-xs-6 col-md-4 square">
+						<!-- square box -->
+						<div class="content">
+							<a href="emergency_call.html" class="square-link">
+								<div class="table">
+									<div class="table-cell numbers">
+											<img src="img/icon-3.PNG"/>
+											S.O.S.
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-6 col-md-4 square">
+						<!-- square box -->
+						<div class="content">
+							<a href="#" class="square-link">
+								<div class="table">
+									<div class="table-cell numbers">
+											<img src="img/icon-4.PNG"/>
+											Gestion Profil
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-6 col-md-4 square">
+						<!-- square box -->
+						<div class="content">
+							<a href="emergency_call.html" class="square-link">
+								<div class="table">
+									<div class="table-cell">
+											<img src="img/icon-5.PNG"/>
+											<span>Etablissements</span> de Santé
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-6 col-md-4 square">
+						<!-- square box -->
+						<div class="content">
+							<a href="emergency_call.html" class="square-link">
+								<div class="table">
+									<div class="table-cell numbers">
+											<img src="img/icon-6.PNG"/>
+											Quiz
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
