--- a/sos_email1.html
+++ b/sos_email1.html
@@ -18,6 +18,7 @@
 		<![endif]-->
 		<!--JS & JQuery-->
 		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/contacts.min.js"></script>
 		
 	</head>
 	
